# libbsarch-cpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: bsa.hpp  (+5 more)
src/: CMakeLists.txt  base_types.cpp  bsa.cpp  bsa_entry_list.cpp  bsa_saver.cpp  transform_archive.cpp
src/detail/: string_convert.cpp
tests/: CMakeLists.txt  Utils.hpp  main.test.cpp  save_and_load.test.cpp  transform_archive.test.cpp  utils.cpp
tests/test_read/generated_temp_files/acawxuumpp/: bgurtjasrw.avhn
tests/test_read/generated_temp_files/aicquzltgf/: ryifqgvjhf.smjz
tests/test_read/generated_temp_files/bakzkwoczn/: lpxjimlmww.vhcv
tests/test_read/generated_temp_files/bflgbttpng/: uuuyddvfmp.flpc
tests/test_read/generated_temp_files/bhikkhcjjq/: xerxljwqmv.grym
tests/test_read/generated_temp_files/bsdrnicpvi/: sylfxlwebq.huhg
tests/test_read/generated_temp_files/buokgjwpsv/: baqmgzsrlf.cykq
tests/test_read/generated_temp_files/bwpfukewoz/: kqzvfznhto.wbrm
tests/test_read/generated_temp_files/cgpposvxev/: dfqczbtkzv.rrjv
tests/test_read/generated_temp_files/chtxmzxelt/: oesabnnktq.zohv
tests/test_read/generated_temp_files/ckffdhvxxn/: khuqvienhk.jmuh
tests/test_read/generated_temp_files/crknqbccrt/: xmxtoklcir.iaso
tests/test_read/generated_temp_files/dihnqcevfa/: xwsfuefiki.vvdn
tests/test_read/generated_temp_files/djtgilqhar/: vixnlqsfuy.ilsg
tests/test_read/generated_temp_files/dkefzjbtmg/: muhkweywqh.mrqm
tests/test_read/generated_temp_files/dlcjpdhgol/: irqxlmsaan.papv
tests/test_read/generated_temp_files/dlkcxqqwxw/: qjsqutsboj.vdta
tests/test_read/generated_temp_files/dubngasdwc/: mnaiipdgiu.oosd
tests/test_read/generated_temp_files/efwjntpzap/: itmzaxhdso.vlpz
tests/test_read/generated_temp_files/ehcdiqnzrf/: wakewjfyyb.oqkc
tests/test_read/generated_temp_files/ekzigtuiwc/: kmcefsdlly.ejjh
tests/test_read/generated_temp_files/exgmnzhyyk/: fvxeuahekp.srmj
tests/test_read/generated_temp_files/fizikrvnzo/: lnlopzxvmh.lrst
tests/test_read/generated_temp_files/fposeenonn/: uazaydceza.fvkn
tests/test_read/generated_temp_files/ftfufjoqef/: lnvvliotth.vsip
tests/test_read/generated_temp_files/fvkiafvfiq/: hkinjmslxi.ehkg
tests/test_read/generated_temp_files/fxcfkkndmg/: httjcyjcpg.liyx
tests/test_read/generated_temp_files/gawrdyvpsc/: cgwggkvrwm.llml
tests/test_read/generated_temp_files/goohemupso/: dqvwetruir.mlxh
tests/test_read/generated_temp_files/hclnbgejhd/: tocsrjwhom.cove
tests/test_read/generated_temp_files/henlpgjoju/: wdecielnvy.vcwu
tests/test_read/generated_temp_files/hframlffac/: ozxkfjjrpq.uelc
tests/test_read/generated_temp_files/hztybjtdqi/: yqihvvthku.nmna
tests/test_read/generated_temp_files/iaxsvvxtcl/: lkiepphmnh.swkm
tests/test_read/generated_temp_files/iiikloosve/: cikzuiqbtm.ukgs
tests/test_read/generated_temp_files/iltvxyiktt/: wkmixkoxgv.ilyn
tests/test_read/generated_temp_files/jfkrahkyzd/: juykoyoyli.yoko
tests/test_read/generated_temp_files/jgotfuwajw/: dzvecyrrhs.hggj
tests/test_read/generated_temp_files/jqcvecjynr/: kqczcbhjdd.fiut
tests/test_read/generated_temp_files/jqknpwiivk/: epfooetmnq.zgln
tests/test_read/generated_temp_files/jtofmqqceq/: ynppkdfdyx.kfvh
tests/test_read/generated_temp_files/jyoznbkaqf/: rvlkcoxnoa.push
(+62 files in other folders)
